--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -15,3 +15,14 @@ jobs:
             - uses: actions/checkout@v3
             - name: Build the Docker image
               run: make build
+    deploy:
+        needs: [ "build" ]
+        runs-on: ubuntu-22.04
+        steps:
+            - name: Login to Docker Hub
+              uses: docker/login-action@v2
+              with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+            - name: Build and Push Docker Images
+              run: make push
