--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -15,7 +15,7 @@ jobs:
             - uses: actions/checkout@v3
             - name: Build the Docker image
               run: make build
-    deploy:
+    push:
         needs: [ "build" ]
         runs-on: ubuntu-22.04
         steps:
