--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -24,5 +24,6 @@ jobs:
               with:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
+            - uses: actions/checkout@v3
             - name: Build and Push Docker Images
               run: make push
