--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -25,5 +25,7 @@ jobs:
                 username: ${{ secrets.DOCKERHUB_USERNAME }}
                 password: ${{ secrets.DOCKERHUB_TOKEN }}
             - uses: actions/checkout@v3
-            - name: Build and Push Docker Images
+            - name: Build the Docker image
+              run: make build
+            - name: Push Docker Images
               run: make push
